Update TT version in templates.cfg

--- a/templates.cfg
+++ b/templates.cfg
@@ -7,7 +7,7 @@
 # . value 4 : the template to use
 # . value 5 : number of execution : "1" for "ONCE" for all entities, default is multiple executions ( executed for each entity )
 #---------------------------------------------------------
-
+# Teloysy Tools ver 2.1.0
 
 Database tables list (HTML)         ; database.html     ; dbdoc         ; database_tables_list.vm  ; 1
 Database table description (HTML)   ; ${BEANNAME}.html  ; dbdoc/tables  ; database_table_doc.vm    ; *
