--- a/classes/build.xml
+++ b/classes/build.xml
@@ -6,8 +6,8 @@
 	    </fileset>
 	  </path>
 
-	  <target name="compile" description="Compile Java classes">
-	    <javac srcdir="." destdir=".">
+	  <target name="compile" description="Compile Java classes" >
+	    <javac srcdir="." destdir="." target="1.5">
 	        <classpath refid="compile.classpath"/>
 	    </javac>
 	  </target>
